translated: libraries/benchmark.html

--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -271,11 +271,11 @@ the email class all calls will use:</p>
 
 <h3>自訂子類別的前置字串</h3>
 
-<p>To set your own sub-class prefix，open your <dfn>application/config/config.php</dfn> file and look for this item:</p>
+<p>要設定自己的子類別前置字串(sub-class prefix)，請開啟 <dfn>application/config/config.php</dfn> 然後找到底下的部份:</p>
 
 <code>$config['subclass_prefix'] = 'MY_';</code>
 
-<p>Please note that all native CodeIgniter libraries are prefixed with <kbd>CI_</kbd> so DO NOT use that as your prefix.</p>
+<p>所有原生的 CodeIgniter 程式庫，都是使用 <kbd>CI_</kbd> 的前置字串，所以別把它拿來用了。</p>
 
 
 
