--- a/general/creating_libraries.html
+++ b/general/creating_libraries.html
@@ -94,9 +94,9 @@ nor can the Loader class in PHP 4.  其他的類別才可以被擴充/取代。<
 </ul>
 
 
-<h2>The Class File</h2>
+<h2>類別檔</h2>
 
-<p>Classes should have this basic prototype (注意:  We are using the name <kbd>Someclass</kbd> purely as an example):</p>
+<p>類別檔應該有底下的基本型態。(注意: 底下取名 <kbd>Someclass</kbd> 單純只是舉例而已:</p>
 
 <code>&lt;?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
 <br /><br />
@@ -109,23 +109,23 @@ class Someclass {<br />
 ?&gt;</code>
 
 
-<h2>Using Your Class</h2>
+<h2>使用自建類別(Using Your Class)</h2>
 
-<p>From within any of your <a href="controllers.html">Controller</a> functions you can initialize your class using the standard:</p>
+<p>由 <a href="controllers.html">控制器(Controller)</a> 內的函數載入任何類別，可使用下列的標準語法:</p>
 
 <code>$this->load->library('<kbd>someclass</kbd>');</code>
 
-<p>Where <em>someclass</em> is the file name，without the ".php" file extension. You can submit the file name capitalized or lower case.
-CodeIgniter doesn't care.</p>
+<p>在 <em>someclass</em> 的部份，只是該類別檔案名稱，不需要包含 ".php" 副檔名。你可以使用大寫或是小寫的檔案名稱，CodeIgniter 都可以接受。</p>
 
-<p>Once loaded you can access your class using the <kbd>lower case</kbd> version:</p>
+<p>
+一但載入之後，你可以取用你的類別採用 <kbd>小寫</kbd> 的方式:</p>
 
 <code>$this-><kbd>someclass</kbd>->some_function();&nbsp; // Object instances will always be lower case
 </code>
 
 
 
-<h2>Passing Parameters When Initializing Your Class</h2>
+<h2>於初使化時，傳遞參數(Passing Parameters When Initializing Your Class)</h2>
 
 <p>In the library loading function you can dynamically pass data via the second parameter and it will be passed to your class
 constructor:</p>
@@ -158,7 +158,7 @@ the config file option will not be available.</p>
 
 
 
-<h2>Utilizing CodeIgniter Resources within Your Library</h2>
+<h2>讓你的程式庫使用 CodeIgniter 資源(Utilizing CodeIgniter Resources within Your Library)</h2>
 
 
 <p>To access CodeIgniter's native resources within your library use the <kbd>get_instance()</kbd> function.
@@ -204,7 +204,7 @@ from within your class constructors.  PHP 4 has trouble referencing the CI super
 since objects do not exist until the class is fully instantiated.</p>
 
 
-<h2>Replacing Native Libraries with Your Versions</h2>
+<h2>原生程式庫替換至個人版本(Replacing Native Libraries with Your Versions)</h2>
 
 <p>Simply by naming your class files identically to a native library will cause CodeIgniter to use it instead of the native one. To use this
 feature you must name the file and the class declaration exactly the same as the native library.  For example，to replace the native <kbd>Email</kbd> library
@@ -224,7 +224,7 @@ class CI_Email {<br /><br />
 <p class="important"><strong>注意:</strong> At this time the Database 類別es can not be replaced with your own versions.</p>
 
 
-<h2>Extending Native Libraries</h2>
+<h2>擴充原生程式庫(Extending Native Libraries)</h2>
 
 <p>If all you need to do is add some functionality to an existing library - perhaps add a function or two - then
 it's overkill to replace the entire library with your version.  In this case it's better to simply extend the class.
@@ -255,7 +255,7 @@ class MY_Email extends CI_Email {<br />
 }</code>
 
 
-<h3>Loading Your Sub-class</h3>
+<h3>載入子類別</h3>
 
 <p>To load your sub-class you'll use the standard syntax normally used.  DO NOT include your prefix.  For example,
 to load the example above，which extends the Email 類別，you will use:</p>
