--- a/database/index.html
+++ b/database/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>The Database 類別 : CodeIgniter 使用手冊</title>
+<title>Database 類別 : CodeIgniter 使用手冊</title>
 
 <style type='text/css' media='all'>@import url('../userguide.css');</style>
 <link rel='stylesheet' type='text/css' media='all' href='../userguide.css' />
@@ -42,7 +42,7 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-Database Library
+Database 類別
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -57,26 +57,25 @@ Database Library
 <div id="content">
 
 
-<h1>The Database 類別</h1>
+<h1>Database 類別</h1>
 
-<p>CodeIgniter comes with a full-featured and very fast abstracted database class that supports both traditional
-structures and Active Record patterns. The database functions offer clear，simple syntax.</p>
+<p>CodeIgniter 配備了幾個全功能且高速的抽象資料庫類別，可以支援傳統的結構與 Active Record 模式。資料庫函數提供了清楚而簡單的語法。</p>
 
 	<ul>
-		<li><a href="examples.html">Quick Start:  Usage Examples</a></li>
-		<li><a href="configuration.html">Database Configuration</a></li>
-		<li><a href="connecting.html">Connecting to a Database</a></li>
-		<li><a href="queries.html">Running Queries</a></li>
-		<li><a href="results.html">Generating Query Results</a></li>
+		<li><a href="examples.html">快速入門：使用範例</a></li>
+		<li><a href="configuration.html">資料庫設定</a></li>
+		<li><a href="connecting.html">連接資料庫</a></li>
+		<li><a href="queries.html">執行查詢</a></li>
+		<li><a href="results.html">產生查詢結果</a></li>
 		<li><a href="helpers.html">Query 補助函數</a></li>
-		<li><a href="active_record.html">Active Record Class</a></li>
-		<li><a href="transactions.html">Transactions</a></li>
-		<li><a href="table_data.html">Table MetaData</a></li>
-		<li><a href="fields.html">Field MetaData</a></li>
-		<li><a href="call_function.html">Custom Function Calls</a></li>
-		<li><a href="caching.html">Query Caching</a></li>
-		<li><a href="forge.html">Database manipulation with Database Forge</a></li>
-		<li><a href="utilities.html">Database Utilities Class</a></li>
+		<li><a href="active_record.html">Active Record 類別</a></li>
+		<li><a href="transactions.html">交易</a></li>
+		<li><a href="table_data.html">資料表元資料</a></li>
+		<li><a href="fields.html">欄位元資料</a></li>
+		<li><a href="call_function.html">自訂函數呼叫</a></li>
+		<li><a href="caching.html">查詢快取</a></li>
+		<li><a href="forge.html">使用 Database Forge 來管理資料庫</a></li>
+		<li><a href="utilities.html">資料庫公用類別</a></li>
 	</ul>
 	
 
