slightly changed for unifying the title of 'database/index.html' and 'database/examples.html'

--- a/database/examples.html
+++ b/database/examples.html
@@ -43,8 +43,8 @@
 <td id="breadcrumb">
 <a href="http://www.codeigniter.com.tw/">CodeIgniter 首頁</a> &nbsp;&#8250;&nbsp;
 <a href="../index.html">使用手冊首頁</a> &nbsp;&#8250;&nbsp;
-<a href="index.html">Database Library</a> &nbsp;&#8250;&nbsp;
-Database Example Code
+<a href="index.html">Database 類別</a> &nbsp;&#8250;&nbsp;
+Database 快速入門
 </td>
 <td id="searchbox"><form method="get" action="http://www.google.com/search"><input type="hidden" name="as_sitesearch" id="as_sitesearch" value="www.codeigniter.com.tw/user_guide/" />搜尋使用手冊&nbsp; <input type="text" class="input" style="width:200px;" name="q" id="q" size="31" maxlength="255" value="" />&nbsp;<input type="submit" class="submit" name="sa" value="Go" /></form></td>
 </tr>
@@ -59,7 +59,7 @@ Database Example Code
 <div id="content">
 
 
-<h1>資料庫快速入門：範例程式</h1>
+<h1>Database 快速入門：範例程式</h1>
 
 <p>以下的頁面包含了示範如何使用資料庫類別的範例程式。請閱讀各個函數的說明頁面來了解完整的細節。</p>
 
