--- a/database/index.html
+++ b/database/index.html
@@ -62,7 +62,7 @@ Database 類別
 <p>CodeIgniter 配備了幾個全功能且高速的抽象資料庫類別，可以支援傳統的結構與 Active Record 模式。資料庫函數提供了清楚而簡單的語法。</p>
 
 	<ul>
-		<li><a href="examples.html">快速入門：使用範例</a></li>
+		<li><a href="examples.html">快速入門：範例程式</a></li>
 		<li><a href="configuration.html">資料庫設定</a></li>
 		<li><a href="connecting.html">連接資料庫</a></li>
 		<li><a href="queries.html">執行查詢</a></li>
