--- a/libraries/uri.html
+++ b/libraries/uri.html
@@ -58,7 +58,7 @@ URI 類別
 
 <h1>URI 類別</h1>
 
-<p>The URI 類別 provides functions that help you retrieve information from your URI strings. If you use URI routing，you can
+<p>URI 類別 provides functions that help you retrieve information from your URI strings. If you use URI routing，you can
 also retrieve information about the re-routed segments.</p>
 
 <p class="important"><strong>注意:</strong> This class is initialized automatically by the system so there is no need to do it manually.</p>
