'database/configuration.html'

--- a/database/configuration.html
+++ b/database/configuration.html
@@ -119,7 +119,7 @@ $db['test']['dbcollat'] = "utf8_general_ci";</code>
 <li><strong>password</strong> - 連線資料庫密碼.</li>
 <li><strong>database</strong> - 連線資料庫名稱.</li>
 <li><strong>dbdriver</strong> - 資料庫類型。例如: mysql，postgres，odbc，等…. 必須為小寫字母.</li>
-<li><strong>dbprefix</strong> - An optional table prefix which will added to the table name when running <a href="active_record.html">Active Record</a> queries.  This permits multiple CodeIgniter installations to share one database.</li>
+<li><strong>dbprefix</strong> - 當使用 <a href="active_record.html">Active Record</a> 查詢資料時，設定此參數，會增加到資料表名稱前面。它云許多個 CodeIgniter 專案共同使用同一個資料庫.</li>
 <li><strong>pconnect</strong> - TRUE/FALSE (boolean) - 使用保持連線功能.</li>
 <li><strong>db_debug</strong> - TRUE/FALSE (boolean) - 顯示資料庫存取錯誤訊息.</li>
 <li><strong>cache_on</strong> - TRUE/FALSE (boolean) - 使用資料庫快取，詳細介紹 <a href="caching.html">資料庫快取類</a>.</li>
