--- a/database/active_record.html
+++ b/database/active_record.html
@@ -416,66 +416,65 @@ $this-&gt;db-&gt;having('user_id'， 45); <br />
 <h2>$this-&gt;db-&gt;or_having();</h2>
 <p>與 haveing() 相同，但是使用 &quot;OR&quot; 來分隔多個子句。</p>
 <h2>$this->db->order_by();</h2>
-<p>Lets you set an ORDER BY clause. The first parameter contains the name of the column you would like to order by.
-The second parameter lets you set the direction of the result.  Options are <kbd>asc</kbd> or <kbd>desc</kbd>，or <kbd>random</kbd>. </p>
+<p>讓你設定 ORDER BY 子句。第一個參數包含你要排序的欄位，第二個參數則讓你指定排序的方向。可用的選項有 <kbd>asc</kbd>、<kbd>desc</kbd> 或 <kbd>random</kbd> 。</p>
 	
 <code>$this->db->order_by("title"，"desc");
 <br />
-<br />// Produces: ORDER BY title DESC
+<br />// 產生： ORDER BY title DESC
 </code>
 
-<p>You can also pass your own string in the first parameter:</p>
+<p>你也能傳入你自訂的字串當作第一個參數：</p>
 	
 <code>$this->db->order_by('title desc，name asc');
 <br />
-<br />// Produces: ORDER BY title DESC，name ASC
+<br />// 產生： ORDER BY title DESC，name ASC
 </code>
 
-<p>Or multiple function calls can be made if you need multiple fields.</p>
+<p>如果你需要對多個欄位排序，也可以多次呼叫這個函數。</p>
 
 <p><code>$this->db->order_by("title"，"desc");<br />
 	$this->db->order_by("name"，"asc"); <br />
 	<br />
-	// Produces: ORDER BY title DESC，name ASC
+	// 產生： ORDER BY title DESC，name ASC
 	</code></p>
-<p class="important">注意: order_by() was formerly known as orderby()，which has been deprecated.</p>
-<p class="important">注意: random ordering is not currently supported in Oracle or MSSQL drivers. These will default to 'ASC'.</p>
+<p class="important">注意： order_by() 之前叫做 orderby()，你不可以繼續使用舊的函數名稱。</p>
+<p class="important">注意： 亂數排序(radom ordering) 目前在 Oracle 與 MSSQL 上面還沒有支援，它們預設會改用 'ASC' 。</p>
 <h2>$this->db->limit();</h2>
-<p>Lets you limit the number of rows you would like returned by the query:</p>
+<p>讓你限制查詢要返回的列數：</p>
 
 <code>
 $this->db->limit(10);<br />
 <br />
-// Produces: LIMIT 10</code>
+// 產生： LIMIT 10</code>
 
 
-<p>The second parameter lets you set a result offset.</p>
+<p>第二個參數讓你設定結果的偏移。</p>
 
 <code>
 $this->db->limit(10，20);<br />
 <br />
-// Produces: LIMIT 20，10 (in MySQL.  Other databases have slightly different syntax)</code>
+// 產生： LIMIT 20，10 (使用 MySQL 。其他資料庫有稍微不同的語法)</code>
 
 
 <h2>$this->db->count_all_results();</h2>
 
-<p>Permits you to determine the number of rows in a particular Active Record query. Queries will accept Active Record restrictors such as where()， or_where()，like()，or_like()，etc. 參考範例:</p>
+<p>讓你可以判斷特定的 Active Record 查詢的結果列數。查詢可接受 Active Record 的限制條件，像是 where()、or_where()、like()、or_like() 等。查詢範例：</p>
 <code>echo $this->db->count_all_results('<var>my_table</var>');<br />
 
-// Produces an integer，like 25<br />
+// 產生整數結果，像是 25<br />
 <br />
 $this-&gt;db-&gt;like('title'，'match');<br />
 $this-&gt;db-&gt;from('<var>my_table</var>');<br />
 echo $this-&gt;db-&gt;count_all_results();<br />
-// Produces an integer，like 17 </code>
+// 產生整數結果，像是 17 </code>
 
 <h2>$this->db->count_all();</h2>
 
-<p>Permits you to determine the number of rows in a particular table.  Submit the table name in the first parameter. 參考範例:</p>
+<p>讓你可以判斷特定資料表的列數。提供資料表名稱作為它的第一個參數。參考範例：</p>
 
 <code>echo $this->db->count_all('<var>my_table</var>');<br />
 <br />
-// Produces an integer，like 25</code>
+// 產生整數結果，像是 25</code>
 
 
 	
